# nwsmonitor

./: .gitignore  pyproject.toml
src/nwsmonitor/: enums.py  nwsmonitor.py
src/nwsmonitor/aio_nws/: nws.py  spc.py
