[project]
dynamic = ["version"]
name = "nwsmonitor"
description = "Discord bot that provides forecasts and alerts from the National Weather Service."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "weather",
    "discord",
    "discord bot",
    "discord-py",
    "py-cord",
    "nws",
    "iem",
]
authors = [
  {name = "Nathaniel Greenwell", email = "nategreenwell@live.com"}
]
maintainers = [
  {name = "Nathaniel Greenwell", email = "nategreenwell@live.com"}
]
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "aiofiles>=24.1.0",
    "py-cord (>=2.7.2,<3.0.0)",
    "tendo>=0.3.0",
    "pandas (>=2.2.3,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "addfips>=0.4.2",
    "markdownify (>=1.2.2,<2.0.0)",
    "audioop-lts (>=0.2.1,<0.3.0) ; python_version >= '3.13'"
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 3- Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/ntvmb/nwsmonitor.git"
Issues = "https://github.com/ntvmb/nwsmonitor/issues"
Changelog = "https://github.com/ntvmb/nwsmonitor/blob/master/CHANGELOG.md"
License = "https://github.com/ntvmb/nwsmonitor/blob/LICENSE"
Discord = "https://discord.gg/xBHESnJYz5"

[tool.poetry]
name = "nwsmonitor"
version = "0.1.0"
description = "Discord bot that provides forecasts and alerts from the National Weather Service."
authors = ["Nathaniel Greenwell <nategreenwell@live.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
